refactor: move project files into project directory

--- a/src/pages/projects/decentralized-identity.mdx
+++ b/src/pages/projects/decentralized-identity.mdx
@@ -1,3 +1,8 @@
+---
+title: Decentralized Identity
+slug: /projects/decentralized-identity
+---
+
 <div class="prose prose-pink">
 
 # Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor purus non enim praesent elementum facilisis leo vel.
