feat: update simplified mdx files, add web5 mdx

--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -30,4 +30,8 @@ Great work is built by great people with great relationships. Our governance mod
 
 [View Our Code of Conduct](https://github.com/TBD54566975/tbd-project-template/blob/main/CODE_OF_CONDUCT.md)
 
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTEyMjI0NTE5MTIsMjA3MDk5MTkxNl19
+-->
+
 </div>
