fix: update web5 markdown

--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -3,6 +3,7 @@ title: Web5
 slug: projects/web5
 ---
 
+<div class="prose prose-pink">
 # WEB5: AN EXTRA DECENTRALIZED WEB PLATFORM
 
 ## Building an extra decentralized web that puts you in control of your data and identity
