fix: update links to sub mdx files

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -4,6 +4,7 @@ slug: projects/tbdex
 ---
 
 <div class="prose prose-pink">
+
 # TBDEX: A LIQUIDITY PROTOCOL
 
 ## Connecting the world of legacy money to the world of digital money
@@ -22,36 +23,17 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to self-sov
 
 ### Components
 
-- [tbDEX Spec](/components/tbdex)
+- [tbDEX Spec](/components/tbdex-protocol/lib/README)
 
-  > Links to page on the developer.tbd.website which pulls in Readme file: https://github.com/TBD54566975/tbdex-protocol/blob/main/README.md
+- [PFI Example Implementation](/components/tbdex-protocol/pfi-mock-impl/README)
 
-- [PFI Example Implementation]
+- [Decentralized Web Nodes](/components/dwn-sdk-js/README)
 
-  > Links to page on the developer.tbd.website which pulls in Readme file: https://github.com/TBD54566975/tbdex-protocol/blob/main/pfi-mock-impl/README.md]
+- [Decentralized Identifiers](https://identity.foundation/ion/)
 
-- [Decentralized Web Nodes]
+- [Self-Sovereign Identity Service](/components/ssi-service/README)
 
-  > Links to page on the developer.tbd.website which pulls in Readme file: https://github.com/TBD54566975/dwn-sdk-js/blob/main/README.md
-
-- [Decentralized Identifiers (Link to DIF/ION)](https://identity.foundation/ion/)
-
-  > No README source we would pull in here; this project is stewarded by [DIF](https://identity.foundation/ion/)
-  > Likely a CTA to the project page is most appropriate in this case.
-
-- [Self-Sovereign Identity Service]
-
-  > Links to page on the developer.tbd.website which pulls in Readme file: https://github.com/TBD54566975/ssi-service/blob/main/README.md
-
-- [Self-Sovereign Identity SDK]
-  > Links to page on the developer.tbd.website which pulls in Readme file:
-  > https://github.com/TBD54566975/ssi-sdk/blob/main/README.md
-
-For each component, may we configure (potentially through JSON) the following calls to action? Each are optional, to be displayed only if specified:
-
-- GitHub
-- Chat
-- Discussions
+- [Self-Sovereign Identity SDK](/components/ssi-sdk/README)
 
 ---
 
