fix: update links on web5 page to point to location of remote files

--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -4,6 +4,7 @@ slug: projects/web5
 ---
 
 <div class="prose prose-pink">
+
 # WEB5: AN EXTRA DECENTRALIZED WEB PLATFORM
 
 ## Building an extra decentralized web that puts you in control of your data and identity
@@ -14,28 +15,19 @@ Web5 brings decentralized identity and data storage to the web we all care so mu
 
 Web2, Web3 → Web5. It's the best of where we've been and what we've learned.
 
-[View Project](developer.tbd.website/projects/web5)
+[View Project](/projects/web5)
 
 ---
 
 ### Components
 
 - [Decentralized Identifiers (Link to DIF/ION)](https://identity.foundation/ion/)
-  > No README source we would pull in here; this project is stewarded by [DIF](https://identity.foundation/ion/)
-  > Likely a CTA to the project page is most appropriate in this case.
-- [Decentralized Web Nodes]
 
-  > Links to page on the developer.tbd.website which pulls in Readme file:
-  > https://github.com/TBD54566975/dwn-sdk-js/blob/main/README.md
+- [Decentralized Web Nodes](./dwn-sdk-js/README)
 
-- [Self-Sovereign Identity Service]
+- [Self-Sovereign Identity Service](./ssi-service/README)
 
-  > Links to page on the developer.tbd.website which pulls in Readme file:
-  > https://github.com/TBD54566975/ssi-service/blob/main/README.md)
-
-- [Self-Sovereign Identity SDK]
-  > Links to page on the developer.tbd.website which pulls in Readme file:
-  > https://github.com/TBD54566975/ssi-sdk/blob/main/README.md)
+- [Self-Sovereign Identity SDK](./ssi-sdk/README)
 
 ---
 
