fix: add links to project details pages

--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -10,11 +10,11 @@ hide_table_of_contents: true
 
 ## List of Projects
 
-### Web5
+### [Web5](./projects/web5)
 
 Builds an extra decentralized web that returns control over your data and identity
 
-### tbDEX
+### [tbDEX](./projects/tbdex)
 
 Connects the world of legacy money to the world of digital money
 
