fix: hide table of contents

--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -1,3 +1,7 @@
+---
+hide_table_of_contents: true
+---
+
 <div class="prose prose-pink">
 
 # Today’s financial systems leave people behind. We build systems for anyone with internet access. And we’re creating it like the web itself: as a public good.
