feat: Add Actors component to Web5 and TBDEX .md files

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -3,6 +3,8 @@ title: tbDEX
 hide_table_of_contents: true
 ---
 
+import { Actors } from '@site/src/components/Actors';
+
 <div class="prose prose-pink">
 
 # TBDEX: A LIQUIDITY PROTOCOL
@@ -37,13 +39,9 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to self-sov
 
 ---
 
-### Actors
-
-- Wallets: wallets act as agents for individuals or institutions by facilitating exchanges with PFIs
-
-- Participating Financial Institutions (PFIs): entities that offer liquidity services on the tbDEX network
-
-- Credential Issuer: organizations or individuals (by means of their wallet) who serve as a source of verifiable credentials
+<div className="actors-container">
+  <Actors />
+</div>
 
 ---
 
