--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -3,6 +3,8 @@ title: Web5
 hide_table_of_contents: true
 ---
 
+import { Actors } from '@site/src/components/Actors';
+
 <div class="prose prose-pink">
 
 # WEB5: AN EXTRA DECENTRALIZED WEB PLATFORM
@@ -31,11 +33,9 @@ Web2, Web3 → Web5. It's the best of where we've been and what we've learned.
 
 ---
 
-### Actors
-
-- Wallets: wallets act as agents for individuals or institutions by facilitating identity and data interactions.
-- Decentralized Web Nodes (DWNs): personal datastores that hold public and encrypted user data.
-- Decentralized Web Apps (DWAs): web apps enhanced with decentralized identity and data storage capabilities.
+<div className="actors-container">
+  <Actors />
+</div>
 
 ---
 
