--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -1,12 +1,12 @@
+---
+hide_table_of_contents: true
+---
+
 import PillarList from '@site/src/components/PillarList/PillarList';
 import { content } from '@site/src/content/open-source';
 import { Divider } from '@site/src/components/Divider';
 
-<div className="prose prose-pink open-source-container">
-  
----
-hide_table_of_contents: true
----
+<div className="prose prose-pink custom-container">
 
 # Today’s financial systems leave people behind. We build systems for anyone with internet access. And we’re creating it like the web itself: as a public good.
 
