feat: Add project component to the projects page
Also add option to the ProjectList component to choose if the
project component grows to fit the page or not

--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -2,6 +2,9 @@
 hide_table_of_contents: true
 ---
 
+import { ProjectList } from '@site/src/components/ProjectList';
+import { content } from '@site/src/content/projects';
+
 <div class="prose prose-pink">
 
 # The future is TBD.
@@ -10,13 +13,9 @@ hide_table_of_contents: true
 
 ## List of Projects
 
-### [Web5](./projects/web5)
-
-Builds an extra decentralized web that returns control over your data and identity
-
-### [tbDEX](./projects/tbdex)
-
-Connects the world of legacy money to the world of digital money
+<div className="project-container">
+  <ProjectList projects={content.projects} growToFit={false} />
+</div>
 
 ---
 
