fix: Change class to className and pass description in string to HomeList component

--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -5,7 +5,7 @@ hide_table_of_contents: true
 import { ProjectList } from '@site/src/components/ProjectList';
 import { content } from '@site/src/content/projects';
 
-<div class="prose prose-pink">
+<div className="prose prose-pink">
 
 # The future is TBD.
 
