--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -10,7 +10,7 @@ import { content as useCases } from '@site/src/content/use-cases.js';
 import { Divider } from '@site/src/components/Divider';
 import PillarList from '@site/src/components/PillarList/PillarList';
 
-<div class="prose prose-pink">
+<div className="prose prose-pink">
 
 # WEB5: AN EXTRA DECENTRALIZED WEB PLATFORM
 
