fix: Rename class to classname

--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -14,7 +14,7 @@ import { content } from '@site/src/content/projects';
 ## List of Projects
 
 <div className="project-container">
-  <ProjectList projects={content.projects} growToFit={false} />
+  <ProjectList projects={content.projects} growToFit={false} title="" />
 </div>
 
 ---
