--- a/src/pages/projects/decentralized-web.mdx
+++ b/src/pages/projects/decentralized-web.mdx
@@ -3,7 +3,7 @@ title: Decentralized Web
 slug: /projects/decentralized-web
 ---
 
-<div class="prose prose-pink">
+<div className="prose prose-pink">
 
 # Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor purus non enim praesent elementum facilisis leo vel.
 
