--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -13,7 +13,7 @@ import { content } from '@site/src/content/projects';
 
 ## List of Projects
 
-<div className="project-container">
+<div className="custom-container">
   <ProjectList projects={content.projects} growToFit={false} title="" />
 </div>
 
