--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -28,19 +28,19 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to self-sov
 
 <Divider type="slash" />
 
-<div className="project-container">
+<div className="custom-container">
   <ProjectList {...content} />
 </div>
 
 <Divider type="slash" />
 
-<div className="actors-container">
+<div className="custom-container">
   <Actors />
 </div>
 
 <Divider type="slash" />
 
-<div className="pillars-container">
+<div className="custom-container">
 
   <PillarList title={useCases.title} pillars={useCases.pillars} />
 </div>
