--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -26,19 +26,19 @@ Web2, Web3 → Web5. It's the best of where we've been and what we've learned.
 
 <Divider type="slash" />
 
-<div className="project-container">
+<div className="custom-container">
   <ProjectList {...content} />
 </div>
 
 <Divider type="slash" />
 
-<div className="actors-container">
+<div className="custom-container">
   <Actors />
 </div>
 
 <Divider type="slash" />
 
-<div className="pillars-container">
+<div className="custom-container">
 
   <PillarList title={useCases.title} pillars={useCases.pillars} />
 </div>
