chore: added missing CTA from copy doc

--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -33,6 +33,8 @@ Web2, Web3 ➞ Web5.
   <Actors content={content.actors} />
 </div>
 
+[¡CTA Button!](https://tbd.website)
+
 <Divider type="slash" />
 
 <div className="custom-container">
