--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -4,6 +4,7 @@ hide_table_of_contents: true
 ---
 
 import { Actors } from '@site/src/components/Actors';
+import { Button } from '@site/src/components/Button';
 import { ProjectList } from '@site/src/components/ProjectList';
 import { content } from '@site/src/content/project-content-web5.js';
 import { Divider } from '@site/src/components/Divider';
@@ -33,7 +34,7 @@ Web2, Web3 ➞ Web5.
   <Actors content={content.actors} />
 </div>
 
-[¡CTA Button!](https://tbd.website)
+<Button label="¡CTA Button!" url="https://tbd.website" />
 
 <Divider type="slash" />
 
