Update tbdex.mdx CTA button

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -4,6 +4,7 @@ hide_table_of_contents: true
 ---
 
 import { Actors } from '@site/src/components/Actors';
+import { Button } from '@site/src/components/Button';
 import { ProjectList } from '@site/src/components/ProjectList';
 import { content } from '@site/src/content/project-content-tbdex.js';
 import { Divider } from '@site/src/components/Divider';
@@ -25,7 +26,7 @@ So now we have both legacy payment systems and new payment systems. But how do w
 
 tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sovereign Identity and access to the financial system for all. And because it abstracts away the complexity of decentralization, developers can focus on building great things.
 
-[¡CTA Button!](tbd.website)
+<Button label="¡CTA Button!" url="https://tbd.website" />
 
 <Divider type="slash" />
 
