--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -34,6 +34,9 @@ Web2, Web3 ➞ Web5.
   <Actors content={content.actors} />
 </div>
 
+<div className="py-8">
+  <Button label="¡CTA Button!" url="https://tbd.website" />
+</div>
 <Divider type="slash" />
 
 <div className="custom-container">
