--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -5,6 +5,19 @@ hide_table_of_contents: true
 import { ProjectList } from '@site/src/components/ProjectList';
 import { content } from '@site/src/content/projects';
 
+<head>
+  <title>{content.meta.title}</title>
+  <meta property="og:title" content={content.meta.title} />
+  <meta
+    property="og:url"
+    content={'https://developer.tbd.website/' + content.meta.path}
+  />
+  <link
+    rel="apple-touch-icon"
+    href="https://developer.tbd.website/img/tbd-fav-icon-main.png"
+  />
+</head>
+
 <div className="prose prose-pink">
 
 # The future is TBD.
