--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -39,5 +39,7 @@ Our work is licensed under the Apache License 2.0, and we welcome you to join us
 
 Great work is built by great people with great relationships. Our governance model protects the community from behavior that doesn’t reflect our values.
 
+<div className="not-prose">
 <ButtonGroup buttons={content.buttons} />
+</div>
 </div>
