feat: adds second CTA button on Web5
Adds two CTA buttons to the Web5 detail page. [Getting Started] and [User Chat]

Resolves: #358

--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -37,7 +37,14 @@ Web5 brings decentralized identity and data storage to your applications. It let
 <div className="custom-container mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
   <SwitchIllustration {...content.web5Illustrations} />
 </div>
-
+<div className="inline-flex space-x-20 pt-8">
+<div className="py-8">
+  <Button label="Getting Started" url="https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_DWP.md" />
+</div>
+<div className="py-8">
+  <Button label="User Chat" url="https://discord.com/channels/937858703112155166/969272658501976117" />
+</div>
+</div>
 <Divider type="slash" />
 
 <div className="custom-container">
@@ -50,9 +57,6 @@ Web5 brings decentralized identity and data storage to your applications. It let
   <Actors content={content.actors} />
 </div>
 
-<div className="py-8">
-  <Button label="¡CTA Button!" url="https://tbd.website" />
-</div>
 <Divider type="slash" />
 
 <div className="custom-container">
