--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -4,7 +4,7 @@ hide_table_of_contents: true
 ---
 
 import { Actors } from '@site/src/components/Actors';
-import { Button } from '@site/src/components/Button';
+import { ButtonGroup } from '@site/src/components/ButtonGroup';
 import { ProjectList } from '@site/src/components/ProjectList';
 import { content } from '@site/src/content/project-content-web5.js';
 import { Divider } from '@site/src/components/Divider';
@@ -37,14 +37,30 @@ Web5 brings decentralized identity and data storage to your applications. It let
 <div className="custom-container mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
   <SwitchIllustration {...content.web5Illustrations} />
 </div>
-<div className="inline-flex space-x-20 pt-8">
-<div className="py-8">
-  <Button label="Getting Started" url="https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_DWP.md" />
-</div>
-<div className="py-8">
-  <Button label="User Chat" url="https://discord.com/channels/937858703112155166/969272658501976117" />
-</div>
-</div>
+<ButtonGroup
+  className="pt-16"
+  buttons={[
+    {
+      type: 'button',
+      data: {
+        label: 'Getting Started',
+        url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_DWP.md',
+      },
+      isExternalLink: true,
+      imageURL: '/img/external-link-blue-icon.svg',
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'User Chat',
+        url: 'https://discord.com/channels/937858703112155166/969272658501976117',
+      },
+      isExternalLink: true,
+      imageURL: '/img/external-link-blue-icon.svg',
+    },
+  ]}
+/>
+
 <Divider type="slash" />
 
 <div className="custom-container">
