fix: update CTAs

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -4,7 +4,7 @@ hide_table_of_contents: true
 ---
 
 import { Actors } from '@site/src/components/Actors';
-import { Button } from '@site/src/components/Button';
+import { ButtonGroup } from '@site/src/components/ButtonGroup';
 import { ProjectList } from '@site/src/components/ProjectList';
 import { content } from '@site/src/content/project-content-tbdex.js';
 import { Divider } from '@site/src/components/Divider';
@@ -39,7 +39,29 @@ So now we have both legacy payment systems and new payment systems. But how do w
 
 tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sovereign Identity and access to the financial system for all. And because it abstracts away the complexity of decentralization, developers can focus on building great things.
 
-<Button label="¡CTA Button!" url="https://tbd.website" />
+<ButtonGroup
+  className="pt-16"
+  buttons={[
+    {
+      type: 'button',
+      data: {
+        label: 'Getting Started',
+        url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_TBDEX.md',
+      },
+      isExternalLink: true,
+      imageURL: '/img/external-link-blue-icon.svg',
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'User Chat',
+        url: 'https://discord.com/channels/937858703112155166/949067728709369856',
+      },
+      isExternalLink: true,
+      imageURL: '/img/external-link-blue-icon.svg',
+    },
+  ]}
+/>
 
 <Divider type="slash" />
 
