fix: change CTA from User Chart to Chat

--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -54,7 +54,7 @@ Web5 brings decentralized identity and data storage to your applications. It let
       {
         type: 'button',
         data: {
-          label: 'User Chat',
+          label: 'Chat',
           url: 'https://discord.com/channels/937858703112155166/969272658501976117',
           isExternalLink: true,
           imageURL: '/img/external-link-blue-icon.svg',
