fix: update CTA to Chat from User Chat

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -47,18 +47,18 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sov
       data: {
         label: 'Getting Started',
         url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_TBDEX.md',
+        isExternalLink: true,
+        imageURL: '/img/external-link-blue-icon.svg',
       },
-      isExternalLink: true,
-      imageURL: '/img/external-link-blue-icon.svg',
     },
     {
       type: 'button',
       data: {
-        label: 'User Chat',
+        label: 'Chat',
         url: 'https://discord.com/channels/937858703112155166/949067728709369856',
+        isExternalLink: true,
+        imageURL: '/img/external-link-blue-icon.svg',
       },
-      isExternalLink: true,
-      imageURL: '/img/external-link-blue-icon.svg',
     },
   ]}
 />
