fix:  fix typo for attribute name

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -39,7 +39,7 @@ So now we have both legacy payment systems and new payment systems. But how do w
 
 tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sovereign Identity and access to the financial system for all. And because it abstracts away the complexity of decentralization, developers can focus on building great things.
 
-<div clasname="not-prose">
+<div className="not-prose">
   <ButtonGroup
     className="pt-16"
     buttons={[
