--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -2,6 +2,7 @@
 hide_table_of_contents: true
 ---
 
+import metacontent from '@site/src/content/global-meta';
 import PillarList from '@site/src/components/PillarList/PillarList';
 import Button from '@site/src/components/Button/Button';
 import ButtonGroup from '@site/src/components/ButtonGroup/ButtonGroup';
@@ -10,6 +11,8 @@ import { Divider } from '@site/src/components/Divider';
 
 <head>
   <title>{content.meta.title}</title>
+  <meta property="og:description" content={metacontent.description} />
+  <meta name="description" content={metacontent.description} />
   <meta property="og:title" content={content.meta.title} />
   <meta
     property="og:url"
