--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -3,6 +3,7 @@ title: tbDEX
 hide_table_of_contents: true
 ---
 
+import metacontent from '@site/src/content/global-meta';
 import { Actors } from '@site/src/components/Actors';
 import { ButtonGroup } from '@site/src/components/ButtonGroup';
 import { ProjectList } from '@site/src/components/ProjectList';
@@ -12,6 +13,8 @@ import PillarList from '@site/src/components/PillarList/PillarList';
 
 <head>
   <title>{content.meta.title}</title>
+  <meta property="og:description" content={metacontent.description} />
+  <meta name="description" content={metacontent.description} />
   <meta property="og:title" content={content.meta.title} />
   <meta
     property="og:url"
