chore: update discord links to new invite link

--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -59,7 +59,7 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sov
         type: 'button',
         data: {
           label: 'Chat',
-          url: 'https://discord.com/channels/937858703112155166/949067728709369856',
+          url: 'https://discord.gg/tbd',
           isExternalLink: true,
           imageURL: '/img/external-link-blue-icon.svg',
         },
