--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -59,7 +59,7 @@ Web5 brings decentralized identity and data storage to your applications. It let
         type: 'button',
         data: {
           label: 'Chat',
-          url: 'https://discord.com/channels/937858703112155166/969272658501976117',
+          url: 'https://discord.gg/tbd',
           isExternalLink: true,
           imageURL: '/img/external-link-blue-icon.svg',
         },
