--- a/learn/discussions/learn-detail.mdx
+++ b/learn/discussions/learn-detail.mdx
@@ -1,6 +1,10 @@
 ---
 title: Trust Demystified
 hide_table_of_contents: true
+sidebar_custom_props:
+  type: video
+  duration: '9:22'
+  thumbnail: /img/placeholder-media-image.png
 ---
 
 import { content } from '@site/src/content/learn-detail';
@@ -20,10 +24,12 @@ import { DetailsSummary } from '@site/src/components/DetailsSummary';
   />
 </head>
 
-<div className="prose prose-pink">
 <div className="text-sm font-light">Guests: {content.guests}</div>
 <div className="text-sm font-light pb-4">Posted: {content.posted}</div>
-<Video url={content.url} details={content.details} summary={content.summary} description={content.description}/>
-<DetailsSummary details={content.details} summary={content.summary}/>
-
-</div>
+<Video
+  url={content.url}
+  details={content.details}
+  summary={content.summary}
+  description={content.description}
+/>
+<DetailsSummary details={content.details} summary={content.summary} />
