feat: Add the events index and create a event detail tempalte

--- a/events/index.mdx
+++ b/events/index.mdx
@@ -1,1 +1,8 @@
-# Events FPO
+---
+title: 'Check out tbd events lorem ipsum dolor sitare meta.'
+---
+
+import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+import { EventCardList } from '../src/components/EventCardList';
+
+<EventCardList items={useCurrentSidebarCategory().items} />
